# real-vaqt-tizim

./: .gitignore  README.md  pyproject.toml
3_amaliyot/: main.py
3_amaliyot/templates/: index.html  result.html
4_amaliyot/: bot.py
5_amaliyot/: cron_task.py
7_amaliyot/: main.py
8_amaliyot/: main.py  pyproject.toml
lesson_1/: Document1.docx  main.py  test.py
lesson_10/: Document1.docx  sensor_malumotlari.csv
lesson_11/: .~cument2.docx  Document2.docx
lesson_2/: Docs.docx  main.py  requirements.txt
lesson_3/: Document1.docx
lesson_4/: Document2.docx
lesson_5/: Document4.docx
lesson_7/: dt.docx
lesson_8/: Document7.docx
